Swagger fixes and some refactoring
