# app/login/handlers.go
@@ -20,6 +20,22 @@ const (
 	IntrospectRoute = "/v1/oauth2/introspect"
 )
 
+var (
+	// pre-allocated errors
+	unauthorized = ErrorResponse{
+		Code:    http.StatusUnauthorized,
+		Message: "Unauthorized",
+	}
+	badRequest = ErrorResponse{
+		Code:    http.StatusBadRequest,
+		Message: "Bad request",
+	}
+	internal = ErrorResponse{
+		Code:    http.StatusInternalServerError,
+		Message: "Failed to sign the token, see server logs",
+	}
+)
+
 type Service interface {
 	Sign(clientID, clientSecret string) (*TokenResponse, error)
 	DecodeJWTToken(tokenString string) (*jwt.Token, error)
@@ -27,26 +43,45 @@ type Service interface {
 }
 
 // IssueToken godoc
+// @Summary Issues JWT Access Tokens (rfc7519) using Client Credentials Grant with Basic Authentication (rfc6749)
 // @ID create-token
-// @Summary issues JWT Access Tokens (rfc7519) using Client Credentials Grant with Basic Authentication (rfc6749)
-// @Description
+// @Description This endpoint issues JWT Access Tokens using the Client Credentials Grant with Basic Authentication.
 // @Tags token
-// @Accept application/x-www-form-urlencoded
+// @Accept x-www-form-urlencoded
 // @Produce json
 // @Success 200 {object} TokenResponse
-// @Failure 400,401
-// @Failure 500
+// @Failure 400 {object} ErrorResponse
+// @Failure 401 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Param grant_type formData string true "grant_type" default(client_credentials)
+// @Param client_id formData string true "client_id" default(test)
+// @Param client_secret formData string true "client_secret" default(test)
 // @Router /v1/oauth2/token [post]
 func IssueToken(svc Service) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		if r.Header.Get("Content-Type") != "application/x-www-form-urlencoded" {
+		if r.Header.Get("Accept") != "application/json" {
 			w.WriteHeader(http.StatusBadRequest)
-			_, _ = fmt.Fprintf(w, "Bad request")
+			_, _ = fmt.Fprintf(w, "Bad request : must accept application/json")
+			return
+		}
+
+		w.Header().Set("Content-Type", "application/json")
+		jsonEncoder := json.NewEncoder(w)
+
+		if r.Header.Get("Content-Type") != "application/x-www-form-urlencoded" {
+			w.WriteHeader(badRequest.Code)
+			if err := jsonEncoder.Encode(badRequest); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
+			}
 			return
 		}
 
 		if err := r.ParseForm(); err != nil {
-			http.Error(w, "Failed to parse form data", http.StatusBadRequest)
+			log.Printf("Failed to parse form data : %#v", err)
+			w.WriteHeader(badRequest.Code)
+			if err := jsonEncoder.Encode(badRequest); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
+			}
 			return
 		}
 
@@ -56,52 +91,81 @@ func IssueToken(svc Service) http.Handler {
 			clientID := r.Form.Get("client_id")
 			clientSecret := r.Form.Get("client_secret")
 			response, err := svc.Sign(clientID, clientSecret)
-			if err != nil {
-				if errors.Is(err, sql.ErrNoRows) {
-					w.WriteHeader(http.StatusUnauthorized)
-					_, _ = fmt.Fprintf(w, "Unauthorized")
-					log.Printf("Client id %q not found", clientID)
-					return
-				}
 
-				if errors.Is(err, bcrypt.ErrMismatchedHashAndPassword) {
-					w.WriteHeader(http.StatusUnauthorized)
-					_, _ = fmt.Fprintf(w, "Unauthorized")
-					log.Printf("Client id %q provided bad password", clientID)
-					return
+			// err is nil => success
+			if err == nil {
+				if err := jsonEncoder.Encode(response); err != nil {
+					log.Printf("Error encoding JSON: %#v", err)
 				}
-
-				w.WriteHeader(http.StatusInternalServerError)
-				_, _ = fmt.Fprintf(w, "Failed to sign the token")
-				log.Printf("Internal server error : %#v", err)
 				return
 			}
 
-			// Send the token response as JSON
-			w.Header().Set("Content-Type", "application/json")
-			if err := json.NewEncoder(w).Encode(response); err != nil {
-				log.Printf("error encoding json : %#v", err)
+			// err present (not found in database ?)
+			if errors.Is(err, sql.ErrNoRows) {
+				log.Printf("Client id %q was not found", clientID)
+				w.WriteHeader(unauthorized.Code)
+				if err := jsonEncoder.Encode(unauthorized); err != nil {
+					log.Printf("Error encoding JSON: %#v", err)
+				}
+				return
+			}
+
+			// err present (bad password ?)
+			if errors.Is(err, bcrypt.ErrMismatchedHashAndPassword) {
+				log.Printf("Client id %q provided bad password", clientID)
+				w.WriteHeader(unauthorized.Code)
+				if err := jsonEncoder.Encode(unauthorized); err != nil {
+					log.Printf("Error encoding JSON: %#v", err)
+				}
+				return
+			}
+
+			// err present (other error)
+			w.WriteHeader(internal.Code)
+			log.Printf("Internal server error: %#v", err)
+			if err := jsonEncoder.Encode(internal); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
 			}
 		default:
-			w.WriteHeader(http.StatusUnauthorized)
-			_, _ = fmt.Fprintf(w, "Unauthorized")
-			log.Printf("Unauthorized attempt detected with request : %#v", r)
-
+			log.Printf("Unauthorized attempt detected with request: %#v", r)
+			w.WriteHeader(unauthorized.Code)
+			if err := jsonEncoder.Encode(unauthorized); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
+			}
 		}
-
 	})
 }
 
+// Extract token from request headers or cookies
+func getTokenFromRequest(r *http.Request) string {
+	tokenString := r.Header.Get("Authorization")
+
+	if len(tokenString) == 0 {
+		// attempt to find it as cookie
+		cookie, err := r.Cookie("jwt_token")
+		if err == nil {
+			tokenString = cookie.Value
+		}
+	}
+
+	if len(tokenString) > 0 {
+		tokenString = strings.Replace(tokenString, "Bearer ", "", 1)
+	}
+
+	return tokenString
+}
+
 // ListRSAKeys godoc
+// @Summary Endpoint to list the signing keys (rfc7517)
 // @ID list-keys
-// @Summary endpoint to list the signing keys (rfc7517)
-// @Description
+// @Description This endpoint lists the signing keys.
 // @Tags token
 // @Produce json
-// @Security
+// @Security BearerAuth
 // @Success 200 {object} KeysResponse
-// @Failure 400,401
-// @Failure 500
+// @Failure 400 {object} ErrorResponse
+// @Failure 401 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
 // @Router /v1/oauth2/keys [get]
 func ListRSAKeys(svc Service) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
@@ -111,54 +175,54 @@ func ListRSAKeys(svc Service) http.Handler {
 			return
 		}
 
-		// Extract token from request headers or cookies
-		tokenString := r.Header.Get("Authorization")
+		w.Header().Set("Content-Type", "application/json")
+		jsonEncoder := json.NewEncoder(w)
 
+		tokenString := getTokenFromRequest(r)
 		if len(tokenString) == 0 {
-			cookie, err := r.Cookie("jwt_token")
-			if err == nil {
-				tokenString = cookie.Value
+			log.Printf("Token not found in request")
+			w.WriteHeader(unauthorized.Code)
+			if err := jsonEncoder.Encode(unauthorized); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
 			}
-		}
-
-		if len(tokenString) == 0 {
-			w.WriteHeader(http.StatusUnauthorized)
-			fmt.Fprint(w, "Unauthorized")
+			return
 			return
 		}
-
-		// Parse and validate the token
-		tokenString = strings.Replace(tokenString, "Bearer ", "", 1)
 
 		// use service to decode our token
 		token, err := svc.DecodeJWTToken(tokenString)
 
 		if err != nil || !token.Valid {
 			log.Printf("invalid token or error : %#v\n%s", err, tokenString)
-			w.WriteHeader(http.StatusUnauthorized)
-			fmt.Fprint(w, "Unauthorized")
+			w.WriteHeader(unauthorized.Code)
+			if err := jsonEncoder.Encode(unauthorized); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
+			}
 			return
 		}
 
 		response := svc.ListKeys()
 
 		// Send the keys response as JSON
-		w.Header().Set("Content-Type", "application/json")
-		json.NewEncoder(w).Encode(response)
+		if err := jsonEncoder.Encode(response); err != nil {
+			log.Printf("Error encoding JSON: %#v", err)
+		}
 	})
 }
 
 // Introspect godoc
-// @ID introspect-jwt
 // @Summary Introspection endpoint (rfc7662) to introspect the issued JWT Access Tokens
-// @Description
+// @ID introspect-jwt
+// @Description This endpoint allows introspection of the issued JWT Access Tokens.
 // @Tags token
 // @Produce json
-// @Security
+// @Security BearerAuth
 // @Success 200 {object} IntrospectionResponse
-// @Failure 400,401
-// @Failure 500
+// @Failure 400 {object} ErrorResponse
+// @Failure 401 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
 // @Router /v1/oauth2/introspect [get]
+// @Router /v1/oauth2/introspect [post]
 func Introspect(svc Service) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		if r.Header.Get("Accept") != "application/json" {
@@ -167,27 +231,31 @@ func Introspect(svc Service) http.Handler {
 			return
 		}
 
-		// Extract token from request headers or cookies
-		tokenString := r.Header.Get("Authorization")
+		w.Header().Set("Content-Type", "application/json")
+		jsonEncoder := json.NewEncoder(w)
 
+		tokenString := getTokenFromRequest(r)
 		if len(tokenString) == 0 {
-			cookie, err := r.Cookie("jwt_token")
-			if err == nil {
-				tokenString = cookie.Value
+			log.Printf("Token not found in request")
+			w.WriteHeader(unauthorized.Code)
+			if err := jsonEncoder.Encode(unauthorized); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
 			}
-		}
-
-		if len(tokenString) == 0 {
-			w.WriteHeader(http.StatusUnauthorized)
-			fmt.Fprint(w, "Unauthorized")
+			return
 			return
 		}
 
-		// Parse and validate the token
-		tokenString = strings.Replace(tokenString, "Bearer ", "", 1)
-
 		// use service to decode our token
 		token, err := svc.DecodeJWTToken(tokenString)
+
+		if err != nil || !token.Valid {
+			log.Printf("invalid token or error : %#v\n%s", err, tokenString)
+			w.WriteHeader(unauthorized.Code)
+			if err := jsonEncoder.Encode(unauthorized); err != nil {
+				log.Printf("Error encoding JSON: %#v", err)
+			}
+			return
+		}
 
 		var response IntrospectionResponse
 		if err == nil {
@@ -207,9 +275,10 @@ func Introspect(svc Service) http.Handler {
 			}
 		}
 
-		// Send the response as JSON
-		w.Header().Set("Content-Type", "application/json")
-		json.NewEncoder(w).Encode(response)
+		// Send the keys response as JSON
+		if err := jsonEncoder.Encode(response); err != nil {
+			log.Printf("Error encoding JSON: %#v", err)
+		}
 	})
 }
 
@@ -241,7 +310,8 @@ func RegisterRoutes(
 			),
 		)
 
-	router.Methods(http.MethodGet).
+	// rfc7662 states it should support both POST and GET verbs
+	router.Methods(http.MethodGet, http.MethodPost).
 		Path(IntrospectRoute).
 		Name("IntrospectRoute").
 		Handler(
